@@ -1,5 +1,6 @@
 ver 0.17.3 (2012/??/??)
-
+* output:
+  - shout: fix memory leak in error handler
 
 ver 0.17.2 (2012/09/30)
 * protocol:
